fix: top navbar colored over text on mobile even when 'hidden'

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -729,6 +729,10 @@ img {
 #left-sidebar {
   z-index: 1;
   background-color: var(--background);
+
+  &:has(#navbar.hide-above-screen) {
+    background-color: transparent;
+  }
 }
 
 svg {
